--- a/audiofilter.ui
+++ b/audiofilter.ui
@@ -13,11 +13,11 @@
   <property name="windowTitle">
    <string>audioFilter</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>190</y>
+     <x>230</x>
+     <y>170</y>
      <width>295</width>
      <height>44</height>
     </rect>
@@ -35,9 +35,25 @@
       <property name="text">
        <string>Load a .wav file</string>
       </property>
+      <property name="autoDefault">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPlainTextEdit" name="plainTextEdit">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>219</y>
+     <width>295</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="plainText">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
